# w32_fnmatch

./: README.md  match_engine.py  pyproject.toml  tests.py  w32_fnmatch.py
.github/workflows/: python-publish.yml
w32_fnmatch/: __init__.py  w32_fnmatch.py
